[package]
name = "dfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
ctrlc = { version = "3.4", features = ["termination"] }
libp2p = { version = "0.56", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tonic = "0.13"
prost = "0.13"                                          # should be the same version as tonic
rs_merkle = "1.5"
hex = "0.4"
serde_cbor = "0.11"
rs_sha256 = "0.1"

[build-dependencies]
tonic-build = "*"
