[package]
name = "dfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2"
ctrlc = { version = "3", features = ["termination"] }
libp2p = { version = "0.56", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
tonic = "0.14"
tonic-prost = "0.14.0"
prost = "0.14"                                          # should be the same version as tonic
rs_merkle = "1"
hex = "0.4"
serde_cbor = "0.11"
rs_sha256 = "0.1"
rocksdb = "0.24"
clap = { version = "4", features = ["derive", "string", "env"] }
clap_derive = "4"
homedir = "0.3"
async-channel = "2"

[build-dependencies]
tonic-prost-build = "*"
